--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -9,6 +9,14 @@ on:
       working-directory:
         type: string
         default: "."
+      dockerfile:
+        type: string
+        required: false
+        default: "./Dockerfile"
+      context:
+        type: string
+        required: false
+        default: "."
     secrets:
       REGISTRY_USERNAME:
         required: true
